--- a/src/main/resources/templates/productos/verProductos.html
+++ b/src/main/resources/templates/productos/verProductos.html
@@ -38,7 +38,7 @@
             <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
                 <!-- Sidebar - Brand -->
-                <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+                <a class="sidebar-brand d-flex align-items-center justify-content-center" href="">
                     <div class="sidebar-brand-icon rotate-n-15">
                         <i class="fas fa-solid fa-eye"></i>
                     </div>
@@ -59,23 +59,23 @@
 
                 <!-- Nav Item - Pages Collapse Menu -->
                 <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseTwo"
                        aria-expanded="true" aria-controls="collapseTwo">
                         <i class="fas fa-regular fa-file"></i>
                         <span>Registrar documentos</span>
                     </a>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" href="#">Ingresos</a>
-                            <a class="collapse-item" href="#">Egresos</a>
-                            <a class="collapse-item" href="#">Ajustes</a>
+                            <a class="collapse-item" href="">Ingresos</a>
+                            <a class="collapse-item" href="">Egresos</a>
+                            <a class="collapse-item" href="">Ajustes</a>
                         </div>
                     </div>
                 </li>
 
                 <!-- Nav Item - Solicitudes -->
                 <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                    <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseUtilities"
                        aria-expanded="true" aria-controls="collapseUtilities">
                         <i class="fas fa-solid fa-share"></i>
                         <span>Solicitudes</span>
@@ -90,7 +90,7 @@
 
                 <!-- Nav Item - Registros terceros y proveedores -->
                 <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTerceros"
+                    <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseTerceros"
                        aria-expanded="true" aria-controls="collapseTerceros">
                         <i class="fas fa-solid fa-address-card"></i>
                         <span>Terceros</span>
@@ -98,8 +98,8 @@
                     <div id="collapseTerceros" class="collapse" aria-labelledby="headingTerceros"
                          data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" href="regProveedores.jsp">Registro Proveedores</a>
-                            <a class="collapse-item" href="regPacientes.jsp">Registro Pacientes</a>
+                            <a class="collapse-item" href="regProveedores">Registro Proveedores</a>
+                            <a class="collapse-item" href="regPacientes">Registro Pacientes</a>
                         </div>
                     </div>
                 </li>
@@ -130,8 +130,8 @@
                     <div id="collapseUsuarios" class="collapse" aria-labelledby="collapseUsuarios"
                          data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" href="#">Registrar Usuarios</a>
-                            <a class="collapse-item" href="#">Consultar Usuarios</a>
+                            <a class="collapse-item" href="">Registrar Usuarios</a>
+                            <a class="collapse-item" href="">Consultar Usuarios</a>
 
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                     <div id="collapseReportes" class="collapse" aria-labelledby="collapseReportes"
                          data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" href="#">Reportes</a>
+                            <a class="collapse-item" href="">Reportes</a>
 
                         </div>
                     </div>
@@ -271,18 +271,15 @@
                                             <td th:text="${producto.registro_sanitario}"></td>
                                                                                         
                                             <td style="display: flex; width: 230px">
-												<form> <!-- enviar codigo al servidor -->
-                                                    <button type="submit" class="btn btn-primary btn-user btn-block" style="background-color: red; margin-right: 5px;">
-                                                        <i class="fas fa-trash-alt"></i>Eliminar
-                                                    </button>
-                                                    
-                                                </form>
-                                                <form> <!-- enviar codigo al servidor -->
-                                                    <button type="submit" class="btn btn-primary btn-user btn-block" style= "margin-left: 5px;">
-                                                        <i class="fas fa-pencil-alt"></i>Editar
-                                                    </button>
-                                                    
-                                                </form>     
+												 
+												 <!-- enviar codigo al servidor -->
+												 
+                                             <a th:href="@{crearProductos/}+${producto.id_produc}" class="btn btn-primary btn-user btn-block" style="background-color: blue; margin-right: 5px">Editar</a>
+
+                                                <!-- enviar codigo al servidor -->
+                                             <a th:href="@{verProductos/}+${producto.id_produc}" class="btn btn-primary btn-user btn-block" style= "background-color: red;  margin-left: 5px">Eliminar</a>
+    
+                                         
                                            </td>
                                             
                                         </tr>
